# evolutionary-snake

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  ruff.toml
input/: neat_config
src/: config.py  main.py  paths.py
src/data/20250719/125731/: neat-checkpoint-0  neat-checkpoint-1  neat-checkpoint-2  neat-checkpoint-3  neat-checkpoint-4  neat_config
src/data/20250719/132817/: neat-checkpoint-0  neat-checkpoint-1  neat-checkpoint-2  neat-checkpoint-3  neat-checkpoint-4  neat_config
src/data/20250719/134211/: neat-checkpoint-0
src/evolution/: __init__.py  neat_snake.py
src/evolutionary_snake/: __init__.py  cli.py  enums.py  game_settings.py  main.py  snake.py  snake_training.py
src/evolutionary_snake/game_canvas/: __init__.py  canvas.py
src/evolutionary_snake/game_modes/: __init__.py  ai_game_mode.py  base_game_mode.py  human_game_mode.py
src/evolutionary_snake/game_objects/: __init__.py  apple.py  snake.py
src/evolutionary_snake/game_objects/boundaries/: __init__.py  base_boundary.py  boundary_factory.py  hard_boundary.py  periodic_boundary.py
src/evolutionary_snake/machine_learning/: __init__.py  input_vector.py  loss_tracking.py
src/evolutionary_snake/settings/: __init__.py  game_settings.py  training_settings.py
src/evolutionary_snake/utils/: enums.py  utility_functions.py
src/game/: game_builder.py  object_builder.py  snake_builder.py  snake_rules.py
src/machine_learning/: __init__.py  input_vector.py  loss_calculator.py
src/test/game/: __init__.py  game_builder_test.py
src/test/machine_learning/: input_vector_test.py
src/utils/: __init__.py  drawing_manager.py
src/visualisation/: __init__.py  visualize.py
tests/: __init__.py
tests/data/: neat_config  test-neat-checkpoint-0
tests/evolutionary_snake/: __init__.py  conftest.py  test_main.py  test_snake.py  test_snake_training.py
tests/evolutionary_snake/game_canvas/: __init__.py  test_canvas.py
tests/evolutionary_snake/game_modes/: __init__.py  test_ai_game_mode.py  test_human_game_mode.py
tests/evolutionary_snake/game_objects/: __init__.py  test_snake.py
tests/evolutionary_snake/game_objects/boundaries/: __init__.py  test_boundary_factory.py
tests/evolutionary_snake/helper_methods/: __init__.py  helper_functions.py
tests/evolutionary_snake/machine_learning/: __init__.py  test_input_vector.py  test_loss_tracking.py
tests/evolutionary_snake/settings/: __init__.py  test_training_settings.py
