[project]
name = "evolutionary-snake"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
]

[tool.poetry]
packages = [{include = "evolutionary_snake", from = "src"}]


[tool.poetry.group.dev.dependencies]
tox = "^4.25.0"
ruff = "^0.11.6"
pylint = "^3.3.6"
bandit = "^1.8.3"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
